ubiquity (1.9.16) UNRELEASED; urgency=low

  * GTK frontend:
    - Put the "before" and "after" partition bars in a table so that they
      line up.
    - Mark the partition bar on the advanced partitioning page as
      non-expanding so that it doesn't take up nearly half the available
      space.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 17 Sep 2008 11:27:39 +0100

ubiquity (1.9.15) intrepid; urgency=low

  * GTK frontend:
    - Don't set page_size in GtkAdjustments; as of GTK+ 2.14 it causes the
      value to be clamped to upper - page_size (LP: #264599).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 17 Sep 2008 03:06:59 +0100

ubiquity (1.9.14) intrepid; urgency=low

  * GTK frontend:
    - Give focus to the language treeview on startup (LP: #254635).
    - Pressing Enter in the keyboard test box activates the Forward button
      (LP: #225548).
  * Improve handling of default keymap options used when setting the X
    keymap on the fly. In particular, set the lv3:ralt_switch option for
    non-US layouts so that AltGr can be tested (LP: #258153).
  * Clear out previous XKB options when setting a new X keymap.
  * Fix mysterious crash if a debconffilter doesn't get started for some
    reason (LP: #125538).
  * Add /var/log/casper.log to apport-generated bugs.
  * Automatic update of included source packages: base-installer
    1.86ubuntu6, clock-setup 0.96ubuntu2, grub-installer 1.32ubuntu4,
    localechooser 2.03ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 16 Sep 2008 12:42:42 +0100

ubiquity (1.9.13) intrepid; urgency=low

  * Change "Automatically sign in" to "Log in automatically", to match
    wording elsewhere (LP: #266995).
  * Never select /dev/ramzswap* as a hibernation target.
  * Fix fully-qualified path generation while walking the source filesystem;
    dirpath is already prefixed with self.source. (This made no difference
    in practice because os.path.join throws away previous components upon