@@ -300,6 +300,9 @@ class BaseFrontend:
         self._abstract('get_keyboard_variant')
     # ubiquity.components.partman
 
+    def set_disk_layout(self, layout):
+        pass
+
     def set_autopartition_choices(self, choices, extra_options,
                                   resize_choice, manual_choice):
         """Set available autopartitioning choices."""
